# FA_RTL

./: .gitignore  README.md
RTL/AXILiteRegs/: fa_axi_lite_regs.v
RTL/DMAEngine/: asyn_fifo.v  axi_read_out.v  axi_write_out.v  dma_csr.v  dma_top.v  dual_port_ram.v  tb_dma_top.v
docs/: flash_attention_archi.md  flash_attention_ip_spec.md
docs/UNIT_SPEC/: AXILiteRegs_SPEC.md  AddrGen_SPEC.md  BufferCluster_SPEC.md  ComputeCore_SPEC.md  DMAEngine_SPEC.md  Scheduler_SPEC.md  TOP_SPEC.md  VPU_SPEC.md
model/: README.md  experiment_config.json  experiment_config_internal_min.json  experiment_config_q8_8_fullrange_internal_min.json  pyproject.toml  run_experiment.py  sweep_internal_bitwidth.py
model/flash_attn_fixed/: __init__.py  data_gen.py  debug_dump.py  exp_pwl.py  experiment_config.py  fixed_format.py  fixed_ops.py  golden_attention.py  hardware_attention.py  hardware_config.py  stats.py
model/sweep_results/: internal_bitwidth_sweep.csv  internal_bitwidth_sweep.json
model/tests/: test_exp_pwl.py  test_experiment_config.py  test_fixed_format.py  test_golden_attention.py  test_hardware_attention.py
rtl/: TOP.v
rtl/DMAEngine/: dual_port_ram.v
sim/: Makefile  filelist.f
tb/: tb_dma_top.v  tb_fa_axi_lite_regs.v
